[project]
name = "firehose"
version = "0.0.0"
authors = [
    { name="Matthew Farrugia-Roberts", email="matthew@far.in.net" },
]
readme = "README.md"
classifiers = [
    "Private :: Do Not Upload",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
]

requires-python = ">=3.10"
dependencies = [
    "tqdm",
    "tyro",
    # for harvest
    "sickle",
    # for sample
    "arxiv",
    "matthewplotlib @ git+https://github.com/matomatical/matthewplotlib",
    "readchar",
    "pathvalidate",
    "requests",
    # for catchup
    "beautifulsoup4",
    # # types
    # "mypy",
    # "types-tqdm",
]

[project.scripts]
firehose = "firehose.sample:cli"
firehose-harvest = "firehose.harvest:cli"
firehose-catchup = "firehose.catchup:cli"
firehose-classes = "firehose.classes:cli"
firehose-readlog = "firehose.readlog:cli"

[project.urls]
Homepage = "https://github.com/matomatical/firehose"
Issues = "https://github.com/matomatical/firehose/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["firehose/"]

[tool.hatch.metadata]
allow-direct-references = true
